hanko/k8s/base/quickstart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hanko-quickstart
  namespace: hanko-auth
  labels:
    app: hanko-quickstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hanko-quickstart
  template:
    metadata:
      labels:
        app: hanko-quickstart
    spec:
      containers:
        - name: hanko-quickstart
          image: ghcr.io/teamhanko/hanko/quickstart:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-public
              containerPort: 8080
              protocol: TCP
