hanko/k8s/base/quickstart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hanko-auth
  name: hanko-quickstart
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    fqdn: app.quickstart.test
spec:
  tls:
    - hosts:
        - $(QUICKSTART_FQDN)
      secretName: quickstart-tls
  rules:
    - host: $(QUICKSTART_FQDN)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quickstart
                port:
                  name: http
